--- a/CreativeEffects/styles_clip_path.css
+++ b/CreativeEffects/styles_clip_path.css
@@ -6,12 +6,13 @@
 body {
   min-height: 100vh;
   background-color: #000;
+  overflow: hidden;
 }
 .container {
   position: relative;
   height: 100vh;
   overflow: hidden;
-  animation: animate 4s linear infinite;
+  z-index: 2;
 }
 .row {
   display: inline-flex;
@@ -21,14 +22,7 @@ body {
 .row:nth-child(even) {
   margin-left: 1px;
 }
-@keyframes animate {
-  0% {
-    filter: hue-rotate(0deg);
-  }
-  100% {
-    filter: hue-rotate(360deg);
-  }
-}
+
 .hexagon {
   position: relative;
   width: 100px;
@@ -38,21 +32,7 @@ body {
   clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
   transition: 2s;
 }
-.hexagon:hover {
-  transition: 0s;
-  background-color: #0f0;
-}
-.hexagon:after {
-  content: " ";
-  position: absolute;
-  top: 4px;
-  bottom: 4px;
-  left: 4px;
-  right: 4px;
-  background: #111;
-  clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
-  z-index: 1;
-}
+
 .hexagon::before {
   content: "";
   position: absolute;
@@ -63,4 +43,26 @@ body {
   pointer-events: none;
   background-color: rgba(255, 255, 255, 0.02);
   z-index: 2;
+}
+
+#cursor {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 400px;
+  height: 400px;
+  background-color: #0f0;
+  border-radius: 50%;
+  transform: translate(-50%, -50%);
+  animation: animate 4s linear infinite;
+  z-index: 1;
+}
+
+@keyframes animate {
+  0% {
+    filter: hue-rotate(0deg) blur(50px);
+  }
+  100% {
+    filter: hue-rotate(360deg) blur(50px);
+  }
 }
